compiler/test-data/parser/blueprint/errors/missing_blueprint_name.frel
module blueprint.errors.missing_blueprint_name

import test.common.*

blueprint {
    text { "Hello" }
}
